Grace/tests/gibbs/errors/t033.grace
// ERROR = P1001
var array := [1, 2, 3
